# githubactions

./: .gitignore  requirements.txt
.github/workflows/: go-actions.yml  python-actions.yml
go/: go.mod  main_test.go
go/dup/: dup.go
go/dup2/: dup2.go
python/: main.py  pyproject.toml
