[tool.poetry]
name = "githubactions"
version = "0.1.0"
description = ""
authors = ["haeyong <haeyong.hwang27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
black = "^20.8b1"
mypy = "^0.790"
pyflakes = "^2.2.0"
isort = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
